2014-02-09  Martin Robinson  <mrobinson@igalia.com>

        [GTK] [CMake] JavaScriptCore crashes in JSC::eval
        https://bugs.webkit.org/show_bug.cgi?id=128434

        Extend a fix for EFL to all ports that use GCC. Also include further fixes
        that were applied only to the autotools build.

        Reviewed by Gyuyoung Kim.

        * Source/cmake/OptionsCommon.cmake: Add -fno-omit-frame-pointer to all ports as well
        as -fno-tree-dce, which is necessary for GTK+.
        * Source/cmake/OptionsEfl.cmake: The GCC flag additions are now in the common options file.

2014-02-04  Gustavo Noronha Silva  <gns@gnome.org>

        [GTK][CMake] Generate GObject DOM bindings .symbols files
        https://bugs.webkit.org/show_bug.cgi?id=126210

        Reviewed by Martin Robinson.

        * Source/PlatformGTK.cmake: add checking DOM bindings API as a dependency
        for documentation generation.

2014-02-13  Xabier Rodriguez Calvar  <calvaris@igalia.com>

        [GTK] MEDIA_CONTROLS_SCRIPT support
        https://bugs.webkit.org/show_bug.cgi?id=123097

        Reviewed by Jer Noble.

        Part of the Autotools and CMake structure to build the media
        controls script.

        * Source/autotools/SetupWebKitFeatures.m4: Activated the media
        controls script by default.
        * Source/cmake/OptionsGTK.cmake: Activated the media controls
        script by default.
        * Source/cmake/WebKitFeatures.cmake: Created the option to
        activate the controls script.
        * Source/cmakeconfig.h.cmake: Created the define template the the
        media controls script.

2014-02-12  Zan Dobersek  <zdobersek@igalia.com>

        [GDB] Add .gdbinit to the list of files ignored by Git
        https://bugs.webkit.org/show_bug.cgi?id=128455

        Reviewed by Anders Carlsson.

        * .gitignore: Ignore the .gdbinit file which can be used to perform WebKit-specific GDB initialization