@@ -1,3 +1,14 @@
+2014-02-14  Commit Queue  <commit-queue@webkit.org>
+
+        Unreviewed, rolling out r164090.
+        http://trac.webkit.org/changeset/164090
+        https://bugs.webkit.org/show_bug.cgi?id=128807
+
+        It broke the EFL build (Requested by Ossy on #webkit).
+
+        * Source/cmake/OptionsCommon.cmake:
+        * Source/cmake/OptionsEfl.cmake:
+
 2014-02-09  Martin Robinson  <mrobinson@igalia.com>
 
         [GTK] [CMake] JavaScriptCore crashes in JSC::eval
